# sunnah-audio-library-backend

./: .gitignore  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  nginx.conf  update.sh
migrations/: 20240401143811_add_users_table.sql  20241201000001_update_users_table.sql
src/: lib.rs  main.rs  sunnah_audio_web_server.rs
src/core/: config.rs  email_service.rs  jwt_auth.rs  mod.rs  redis_helper.rs  responses.rs  telementry.rs  utils.rs
src/core/configurations/: local.yaml  mod.rs  production.yaml  sandbox.yaml
src/db/: access.rs  account.rs  account_tiers.rs  account_types.rs  bank.rs  books.rs  currencies.rs  file_interactions.rs  files.rs  follows.rs  mod.rs  play_history.rs  playlists.rs  scholars.rs  settings.rs  states.rs  subscriptions.rs  transactions.rs  uploads.rs  users.rs
src/db/vas/: bills_payment.rs  cable_networks.rs  data_plans.rs  electricity_discos.rs  mobile_networks.rs  mod.rs  vas_providers.rs
src/jobs/: mod.rs  subscription_expiry.rs
src/models/: access.rs  books.rs  common.rs  file_interactions.rs  files.rs  follows.rs  mod.rs  pagination.rs  play_history.rs  playlists.rs  scholars.rs  settings.rs  states.rs  subscriptions.rs  uploads.rs  users.rs
src/routes/: books.rs  file_interactions.rs  files.rs  follows.rs  mod.rs  permissions.rs  play_history.rs  playlists.rs  related_files.rs  scholars.rs  search.rs  settings.rs  states.rs  subscriptions.rs  uploads.rs  users.rs
src/routes/auth/: auth_routes.rs
src/utils/: rabbitmq_service.rs
