[package]
name = "sunnah_audio"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "sunnah_audio_rust_service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
claim = "0.5.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = {version="0.7.2", features=["with-uuid-0_8"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
config = "0.13.3"
colored = "2.0.0"
uuid={version="1", features=["v4", "serde"]}
chrono={ version = "0.4.26",  features = ["serde"]}
chrono-tz = "0.5"
reqwest= { version = "0.11",  features=["json"]}
tracing = {version = "0.1.37", features = ["log"]}
tracing-subscriber = { version ="0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
once_cell = "1.18.0"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7.5"
unicode-segmentation = "1.10.1"
validator = { version = "0.15", features = ["derive"] }
fake = "~2.6.1"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.21"
argon2 = { version = "0.5", features = ["std"] }
redis = { version = "0.23", features = ["tokio-comp"] }
openssl = { version = "0.10", features = ["vendored"] }
jsonwebtoken = "8.3.0"
tracing-appender = "0.2.2"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3" 
actix-cors = "0.6.4"
bcrypt = "0.15.0"
ureq = "2.5"
rust_decimal = "1.28.1"
bigdecimal = { version = "0.3.0", features = ["serde"] }
lapin = "2.1.1"

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "mysql",
    "json",
    "uuid",
    "chrono",
    "bigdecimal",
    "migrate",
    "macros"
]

[dev-dependencies]
wiremock = "0.4.9"
mockito = "0.30.0"
